feat: Update website styling and dependencies
Update styling for Layout component and add metal-icons v0.1.11

--- a/packages/website/src/components/Layout/Layout.module.css
+++ b/packages/website/src/components/Layout/Layout.module.css
@@ -25,11 +25,15 @@
   align-items: center;
   justify-content: center;
   padding: 2rem 0;
+  color: #ccc;
 }
 
-.footer p {
+.footer > div {
   font-size: 0.75rem;
   opacity: 0.75;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
