--- a/packages/website/src/styles/globals.css
+++ b/packages/website/src/styles/globals.css
@@ -1,16 +1,20 @@
 :root {
   --max-width: 1100px;
-  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 
-  --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 255, 255;
+  --foreground: #000;
+  --background: #fff;
+  --surface: #f0f0f0;
+  --control: #f9f9f9;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 0, 0;
+    --foreground: #fff;
+    --background: #000;
+    --surface: #111111;
+    --control: #222222;
   }
 }
 
@@ -21,13 +25,30 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background-color: var(--background-rgb);
+  color: rgb(var(--foreground));
+  background-color: var(--background);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  appearance: none;
+  cursor: default;
+  background-color: transparent;
+  border: none;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  letter-spacing: inherit;
+  outline: none;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  text-align: initial;
+  -webkit-tap-highlight-color: transparent;
 }
 
 @media (prefers-color-scheme: dark) {
