--- a/packages/website/src/components/Icons/Icons.module.css
+++ b/packages/website/src/components/Icons/Icons.module.css
@@ -61,7 +61,7 @@
 
   grid-template-columns: repeat(10, minmax(10%, auto));
   justify-items: center;
-  gap: 2rem 1rem;
+  gap: 2rem 0;
   margin: 0 auto;
   padding: 0;
 }
