--- a/packages/website/src/styles/globals.css
+++ b/packages/website/src/styles/globals.css
@@ -6,7 +6,7 @@
   --foreground: #000;
   --background: #fff;
   --surface: #f0f0f0;
-  --control: #f9f9f9;
+  --control: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
