--- a/packages/website/src/components/Icons/Icons.module.css
+++ b/packages/website/src/components/Icons/Icons.module.css
@@ -51,6 +51,30 @@
   width: 100%;
 }
 
+/* Section */
+.Section {
+  max-width: var(--max-width);
+  padding: 2.5rem 0;
+  margin: 0 auto;
+  background-color: var(--surface);
+  border-radius: 0.75rem;
+}
+
+.Section:first-of-type {
+  margin-bottom: 2rem;
+}
+
+/* Header */
+.Header {
+  margin-left: 45px;
+  margin-bottom: 1.75rem;
+}
+
+.Header h3 {
+  font-size: 12px;
+  font-weight: 600;
+}
+
 /* Grid */
 .Grid {
   display: grid;
@@ -64,6 +88,10 @@
   gap: 2rem 0;
   margin: 0 auto;
   padding: 0;
+}
+
+.Grid:first-child {
+  margin-bottom: 4rem;
 }
 
 /* Mobile */
