feat: Update Layout component
Update Layout component styles, add new links and change icon sizes

--- a/packages/website/src/components/Layout/Layout.module.css
+++ b/packages/website/src/components/Layout/Layout.module.css
@@ -83,7 +83,7 @@
   .Logo {
     filter: invert(0) drop-shadow(0 0 0.3rem #ffffff55);
   }
-  .FooterIcon {
+  .NavIcon {
     filter: invert(100%);
   }
 }
