--- a/packages/website/src/components/Icons/Icons.module.css
+++ b/packages/website/src/components/Icons/Icons.module.css
@@ -6,12 +6,12 @@
   align-items: center;
 }
 
-.TabsList {
+.Toolbar {
   flex: none;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 0.5rem;
   width: 100%;
   max-width: var(--max-width);
@@ -19,6 +19,33 @@
   padding: 0.5rem;
   background-color: var(--surface);
   border-radius: 0.75rem;
+}
+
+.ToolbarButton {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 32px;
+  padding: 0 0.75rem;
+  border-radius: 0.25rem;
+  background-color: transparent;
+  color: var(--foreground);
+  user-select: none;
+  cursor: pointer;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
+}
+
+.ToolbarButton:hover {
+  background-color: var(--control);
+}
+
+.TabsList {
+  flex: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.5rem;
 }
 
 .TabsTrigger {
