style: Update Popover styling
Update Popover js and css files with new styling

--- a/packages/website/src/components/Popover/Popover.module.css
+++ b/packages/website/src/components/Popover/Popover.module.css
@@ -25,3 +25,15 @@
 .ToolbarButton:where([data-state='open']) {
   background-color: var(--control);
 }
+
+.PopoverContent {
+  padding: 1.25rem;
+  width: 420px;
+  background-color: var(--control);
+  border-radius: 0.25rem;
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  animation-duration: 400ms;
+  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  will-change: transform, opacity;
+}
