--- a/packages/website/src/components/Popover/Popover.module.css
+++ b/packages/website/src/components/Popover/Popover.module.css
@@ -1,10 +1,4 @@
-.Popover {
-  display: flex;
-  flex-direction: column;
-  padding: 0 3rem;
-}
-
-.ToolbarButton {
+.PopoverButton {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -18,11 +12,11 @@
   transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
 }
 
-.ToolbarButton:hover {
+.PopoverButton:hover {
   background-color: var(--control);
 }
 
-.ToolbarButton:where([data-state='open']) {
+.PopoverButton:where([data-state='open']) {
   background-color: var(--control);
 }
 
@@ -30,10 +24,76 @@
   padding: 1.25rem;
   width: 420px;
   background-color: var(--control);
+  border: 1px solid var(--border);
   border-radius: 0.25rem;
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
     hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+}
+
+.PopoverContent {
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
+}
+
+.PopoverContent:focus {
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+    hsl(206 22% 7% / 20%) 0px 10px 20px -15px, 0 0 0 2px var(--violet-7);
+}
+
+.PopoverContent[data-state='open'][data-side='top'] {
+  animation-name: slideDownAndFade;
+}
+.PopoverContent[data-state='open'][data-side='right'] {
+  animation-name: slideLeftAndFade;
+}
+.PopoverContent[data-state='open'][data-side='bottom'] {
+  animation-name: slideUpAndFade;
+}
+.PopoverContent[data-state='open'][data-side='left'] {
+  animation-name: slideRightAndFade;
+}
+
+@keyframes slideUpAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(4px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideRightAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(-4px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideDownAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(-4px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideLeftAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(4px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
