style: Update Layout and Popover styles
Update Layout and Popover styles: add underline text decoration, change opacity, and update pre tag styles.

--- a/packages/website/src/components/Layout/Layout.module.css
+++ b/packages/website/src/components/Layout/Layout.module.css
@@ -70,13 +70,14 @@
 }
 
 .Footer a {
+  text-decoration: underline;
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
 .Footer a:hover {
-  opacity: 60%;
+  opacity: 0.5;
 }
 
 @media (prefers-color-scheme: dark) {
