--- a/packages/website/src/components/Popover/Popover.module.css
+++ b/packages/website/src/components/Popover/Popover.module.css
@@ -26,22 +26,16 @@
   gap: 1.25rem;
   padding: 1.25rem;
   width: 420px;
+  border-radius: 0.25rem;
   background-color: var(--control);
   border: 1px solid var(--border);
-  border-radius: 0.25rem;
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
-    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  box-shadow: var(--shadow);
 }
 
 .PopoverContent {
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
-}
-
-.PopoverContent:focus {
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
-    hsl(206 22% 7% / 20%) 0px 10px 20px -15px, 0 0 0 2px var(--violet-7);
 }
 
 .PopoverContent[data-state='open'][data-side='top'] {
