style: Update shadow styles
Update shadow styles in globals.css file

--- a/packages/website/src/styles/globals.css
+++ b/packages/website/src/styles/globals.css
@@ -8,8 +8,8 @@
   --surface: #f0f0f0;
   --control: #fff;
   --border: rgba(0, 0, 0, 0.1375);
-  --shadow: rgba(140, 149, 159, 0.2) 0 8px 24px 0,
-    rgba(140, 149, 159, 0.1) 0 1px 2px 0;
+  --shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.1) 0px 2px 4px -2px;
 }
 
 @media (prefers-color-scheme: dark) {
