--- a/packages/website/src/styles/Metal.module.css
+++ b/packages/website/src/styles/Metal.module.css
@@ -159,6 +159,15 @@
   display: flex;
   flex-direction: row;
   gap: 8px;
+  width: 100%;
+}
+
+.footer > div:nth-child(2) {
+  justify-content: center;
+}
+
+.footer > div:nth-child(3) {
+  justify-content: flex-end;
 }
 
 .footer a > img {
