--- a/packages/website/src/styles/Metal.module.css
+++ b/packages/website/src/styles/Metal.module.css
@@ -7,6 +7,12 @@
   padding: 3rem 6rem;
 }
 
+@media screen and (max-width: 1280px) {
+  .main {
+    padding: 3rem 1rem;
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -27,6 +33,7 @@
   font-size: 3.75rem;
   font-weight: 900;
   line-height: 1;
+  text-align: center;
   letter-spacing: -0.05em;
 }
 
@@ -36,6 +43,7 @@
   font-weight: 400;
   line-height: 1.75rem;
   color: rgb(var(--fg-muted-rgb));
+  text-align: center;
 }
 
 .install {
@@ -99,6 +107,18 @@
   width: 100%;
   max-width: var(--max-width);
   margin: 2rem 0 4rem 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .grid {
+    grid-template-columns: repeat(8, minmax(12%, auto));
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .grid {
+    grid-template-columns: repeat(5, minmax(20%, auto));
+  }
 }
 
 .empty {
