--- a/packages/website/src/styles/index.css
+++ b/packages/website/src/styles/index.css
@@ -1,4 +1,5 @@
 :root {
+  --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   --font-mono: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   --max-width: 1220px;
   --border-radius: 6px;
@@ -49,13 +50,14 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-#root, #__next {
+#root {
   isolation: isolate;
 }
 
 body {
   color: rgb(var(--fg-rgb));
-  background-color: rgb(var(--bg-rgb)) 
+  background-color: rgb(var(--bg-rgb)); 
+  font-family: var(--font-sans);
 }
 
 a {
