--- a/packages/website/src/styles/App.css
+++ b/packages/website/src/styles/App.css
@@ -100,8 +100,8 @@
 
 .filter input[type="text"] {
   width: 100%;
-  height: 100%;
   max-width: 640px;
+  height: 100%;
   padding: 1rem;
   border: 1px solid rgb(var(--border-rgb));
   border-radius: 0.5rem;
@@ -120,24 +120,31 @@
 .controls {
   display: flex;
   align-items: center;
+  height: 58px;
   margin-top: 4rem;
   margin-bottom: 1rem;
   gap: 1rem;
-  height: 58px;
 }
 
 .filter, .menu {
   height: 100%;
 }
 
+.menu {
+  position: relative;
+  display: inline-block;
+}
+
 .menu select {
   height: 100%;
   padding: 1rem;
+  padding-right: 2.5em;
   border: 1px solid rgb(var(--border-rgb));
   border-radius: 0.5rem;
   color: rgb(var(--fg-muted-rgb));
   background-color: rgb(var(--surface-rgb));
   font-size: 1rem;
+  appearance: none;
 }
 
 .menu select:focus {
@@ -145,6 +152,20 @@
   border-color: rgba(var(--border-rgb), 0.25);
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.menu select:focus+ .icon-chevron {
+  color: rgb(var(--fg-rgb));
+}
+
+.menu select+.icon-chevron {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  color: rgb(var(--fg-muted-rgb));
+  transform: translateY(-50%);
+  pointer-events: none;
+  
 }
 
 .grid {
