feat: reorganize Size and Variant selectors in Home component and add styles for Variant control

--- a/packages/website/src/styles/App.module.css
+++ b/packages/website/src/styles/App.module.css
@@ -184,7 +184,50 @@
   color: rgb(var(--fg-rgb));
 }
 
-/* Search controls */
+/* Varant control */
+
+.variant {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  height: 100%;
+}
+
+.variant select {
+  height: 100%;
+  padding: 1rem;
+  padding-right: 2.5em;
+  border: 1px solid rgb(var(--border-rgb));
+  border-radius: 0.5rem;
+  color: rgb(var(--fg-muted-rgb));
+  background-color: rgb(var(--surface-rgb));
+  font-size: 1rem;
+  appearance: none;
+}
+
+.variant select:focus {
+  --border-rgb: var(--fg-rgb);
+  border-color: rgba(var(--border-rgb), 0.25);
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.variant svg {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  color: rgb(var(--fg-muted-rgb));
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+.variant select:focus+svg {
+  color: rgb(var(--fg-rgb));
+}
+
+/* Search control */
 
 .search {
   position: relative;
