--- a/packages/website/src/styles/App.module.css
+++ b/packages/website/src/styles/App.module.css
@@ -33,6 +33,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-top: 4rem;
 }
 
 .header h1 {
@@ -396,4 +397,27 @@
   border-width: 0;
   white-space: nowrap;
   clip: rect(0, 0, 0, 0);
+}
+
+/* Hero */
+
+.hero {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(16px, 1fr));
+  gap: 32px;
+  width: 100%;
+  max-width: 400px;
+  justify-content: center;
+}
+
+.hero-item {
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
