refactor: update Hero component styling by introducing a new CSS class for icons and adjusting foreground color variables

--- a/packages/website/src/styles/App.module.css
+++ b/packages/website/src/styles/App.module.css
@@ -420,6 +420,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: rgb(var(--fg-rgb));
+}
+
+.hero-item-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(var(--fg-rgb));
 }
 
 .hero-emoji {
