--- a/packages/website/src/styles/App.module.css
+++ b/packages/website/src/styles/App.module.css
@@ -263,17 +263,12 @@
   width: 100%;
   max-width: 640px;
   height: 100%;
-  padding: 1rem;
-  padding-left: 2.5em;
+  padding: 1rem 2.5em 1rem 2.5em;
   border: 1px solid rgb(var(--border-rgb));
   border-radius: 0.5rem;
   color: rgb(var(--fg-rgb));
   background-color: rgb(var(--surface-rgb));
   font-size: 1rem;
-}
-
-.searchInputWithClear {
-  padding-right: 2.5em !important;
 }
 
 .search input[type="text"]:focus {
@@ -312,16 +307,11 @@
   height: 16px;
   padding: 0;
   cursor: pointer;
-  color: rgb(var(--fg-muted-rgb));
   transform: translateY(-50%);
   transition: color 0.2s ease, opacity 0.2s ease;
 }
 
 .searchClear:hover {
-  color: rgb(var(--fg-rgb));
-}
-
-.searchClear:active {
   opacity: 0.7;
 }
 
@@ -332,8 +322,11 @@
 }
 
 .searchClear svg {
-  width: 100%;
-  height: 100%;
+  position: relative;
+  top: auto;
+  left: auto;
+  transform: translate(0);
+  color: rgb(var(--fg-rgb));
 }
 
 /* Install */
